plugins {
	id 'fabric-loom' version '1.14-SNAPSHOT'
	id 'maven-publish'
    id "me.modmuss50.mod-publish-plugin" version "1.1.0"
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	mavenCentral()
	maven { url "https://maven.shedaniel.me" }
	maven {
		url "https://cursemaven.com"
	}
	maven {
		// location of the maven that hosts JEI files since January 2023
		name = "Jared's maven"
		url = "https://maven.blamejared.com/"
	}
	maven {
		// location of a maven mirror for JEI files, as a fallback
		name = "ModMaven"
		url = "https://modmaven.dev"
	}
}

loom {
	accessWidenerPath = file("src/main/resources/moregears.accesswidener")
}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	modCompileOnly "dev.architectury:architectury-fabric:16.0.3"
	modCompileOnly("me.shedaniel.cloth:cloth-config-fabric:18.0.145") {
		exclude(group: "net.fabricmc.fabric-api")
	}

	include modApi("teamreborn:energy:${project.energy_api_version}"){
		exclude(group: "net.fabricmc.fabric-api")
		exclude group: "net.fabricmc", module: "fabric-loader"
	}

	modImplementation("mezz.jei:jei-${minecraft_version}-common-api-intermediary:${jei_version}")
    modRuntimeOnly("mezz.jei:jei-${minecraft_version}-fabric:${jei_version}")

	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${rei_version}"
//	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${rei_version}"

//	modRuntimeOnly("curse.maven:jade-324717:6351396")
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	repositories {
        mavenLocal()
        maven {
            url = findProperty("repsy_url")
            credentials {
                username = findProperty("repsy_username")
                password = findProperty("repsy_password")
            }
        }
	}
}

publishMods {
    file.set(remapJar.archiveFile)
    type = STABLE
    modLoaders.add("fabric")
    changelog = file("changelog.md").text
    displayName = "moregears-" + mod_version

    curseforge {
        projectId = "1180717"
        accessToken = findProperty("CF_TOKEN")
        minecraftVersions.add(minecraft_version)
    }

    modrinth {
        projectId = 'LDRhJ7sL'
        accessToken = findProperty("MODRINTH_TOKEN")
        minecraftVersions.add(minecraft_version)
    }
}